2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.93

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Update license to GPLv3+.

	* Makefile.am: Update license notice.
	* common.in: Likewise.

2010-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Fix bug: Do a ‘co -l’ before modifying the working file.

	Improper methodology introduced 2010-03-10,
	"Fix bug: Remove all log messages when removing all revisions".
	* t000.test: Do ‘co -l’ before composing the first revision.

2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Output proper range for ‘RM_STDIO’ fro.

	Regression introduced 2010-04-27, "Add abstraction: fro_spew_partial".
	* t001.test: Add a test to check proper rlog(1) output,
	given an RCS file bloated into into ‘RM_STDIO’ territory.

2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Resolve ‘BRNUM.’ correctly.

	Regression introduced 2010-04-21, "Add abstraction: fully_numeric".
	* t001.test: Add a test to compare the output of "co -pX",
	where X is ‘BRNUM’ in one case and ‘BRNUM.’ in another.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcs: Fix bug: Correctly erase/append access-list entries.

	Regression introduced 2010-04-28,
	"Use ‘struct link’ instead of ‘struct access’".
	* t001.test: Add some access-list modification tests.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcs: Fix bug: Correctly delete symbolic name.

	Regression introduced 2010-04-28,
	"Replace ‘struct assoc’ with ‘struct wlink’ + ‘struct symdef’".
	* t001.test: New file.
	* Makefile.am (TESTS): Add t001.test.

2010-03-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use GNU Automake.

	* Makefile.am: New file.
	* Makefile.in: Delete file.

2010-03-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Also check expected `co' behavior on no-rev RCS file.

	* t000.test <empty>: Check that `co -p' produces no output.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Fix bug: Remove all log messages when removing all revisions.
