@@ -1,3 +1,12 @@
+2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Fix bug: Specify "./common" to avoid ‘PATH’ search.
+
+	* alive.test: Say ". ./common".
+	* t000.test: Likewise.
+	* t001.test: Likewise.
+	Reported by Ludovic Courtès.
+
 2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Release: 5.7.93
